--- a/02-career.qmd
+++ b/02-career.qmd
@@ -34,7 +34,7 @@ A great crop hides a whole story of questions underneath. Curiosity drives farme
 
 ## Assistant Professor - Pick Family Research Chair in Sustainable Cropping Systems
 
-### 2023.
+### Oct 2023 - Present
 
 {{< fa location-dot >}} Department of Plant Agriculture, University of Guelph, Ontario, Canada.
 
@@ -42,7 +42,7 @@ A great crop hides a whole story of questions underneath. Curiosity drives farme
 
 ## Postdoctoral Fellow - Digital Agronomy
 
-### 2022 - 2023.
+### Jan 2022 - Oct 2023.
 
 {{< fa location-dot >}} Department of Agronomy, Kansas State University, Kansas, United States.
 
@@ -50,7 +50,7 @@ A great crop hides a whole story of questions underneath. Curiosity drives farme
 
 ## Graduate Research Assistant
 
-### 2018 - 2021
+### Aug 2018 - Dec 2021
 
 {{< fa location-dot >}} Department of Agronomy, Kansas State University
 
