--- a/06-contact.qmd
+++ b/06-contact.qmd
@@ -8,32 +8,13 @@ format:
 
 {{< fa envelope >}} acorrend\@uoguelph.ca
 
-{{< fa map-pin >}} Rm 226 Crop Science Bldg, 50 Stone Rd E, Guelph, ON-N1G 2W1, Canada.
+{{< fa map-pin >}} Rm 226, Crop Science Bldg \| Department of Plant Agriculture
 
-::: columns
-::: {.column width="33%" align="center"}
-![](assets/images/twitter-brands.svg){fig-align="left" width="40" height="40"}[Twitter](https://twitter.com/aacorrendo)
-:::
+Ontario Agricultural College \| University of Guelph \| 50 Stone Rd E, Guelph, ON-N1G 2W1, Canada.
 
-::: {.column width="34%" align="center"}
-![](assets/images/linkedin-brands.svg){fig-align="left" width="40" height="40"}[Linkedin](https://linkedin.com/in/adriancorrendo)
-:::
+# Networks
 
-::: {.column width="33%" align="center"}
-![](assets/images/github-brands.svg){width="40" height="40"} [GitHub](https://github.com/adriancorrendo)
-:::
-:::
-
-::: columns
-::: {.column width="33%" align="center"}
-{{< ai orcid >}}[ORCID](https://orcid.org/0000-0002-4172-289X)
-:::
-
-::: {.column width="34%" align="center"}
-{{< ai google-scholar >}}[GoogleScholar](https://scholar.google.com/citations?user=4h88EXkAAAAJ&hl=en)
-:::
-
-::: {.column width="33%" align="center"}
-{{< ai researchgate >}}[ResearchGate](https://www.researchgate.net/profile/Adrian-Correndo)
-:::
-:::
+|                                                                                                      |                                                                                                                                                 |                                                                                                                                   |
+|------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------|
+| [![](assets/images/X_logo.png.webp){fig-align="center" width="60"}](http://twitter.com/aacorrendo)   | [![](assets/images/linkedin-icon.png){fig-align="center" width="60"}](https://www.linkedin.com/in/adriancorrendo/)                              | [![](assets/images/github-brands.svg){fig-align="center" width="60" height="60"}](http://github.com/adriancorrendo)               |
+| [![](assets/images/orcid.png){fig-align="center" width="60"}](https://orcid.org/0000-0002-4172-289X) | [![](assets/images/768px-Google_Scholar_logo.png){fig-align="center" width="60"}](https://scholar.google.com/citations?user=4h88EXkAAAAJ&hl=en) | [![](assets/images/ResearchGate_icon.png){fig-align="center" width="60"}](https://www.researchgate.net/profile/Adrian-Correndo-2) |
