--- a/01-index.qmd
+++ b/01-index.qmd
@@ -9,14 +9,14 @@ format:
 # 🙋🏻 Bio
 
 ::: columns
-::: {.column width="33%"}
+::: row
 ![](images/me_UoG_1.JPG){fig-align="center"}
 :::
 
 ::: {.column width="2%"}
 :::
 
-::: {.column width="65%"}
+::: row
 Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my wife and our daugthers in Guelph, ON, Canada, where I work for the Department of Plant Agriculture at the [University of Guelph](https://www.plant.uoguelph.ca) as an Assistant Professor and the Research Chair for the The Pick Family Chair in Sustainable Cropping Systems.
 
 My mission is to develop and evaluate cropping systems that effectively deal with the challenge of producing more food, fuel, and fiber without degrading our natural resources. On this endeavor, I perform research, teaching, and outreach activities for Ontario farmers and agriculture stakeholders.
@@ -30,6 +30,8 @@ Teamwork and mentoring, an essential part of my professional and personal philos
 ## 👷🏻What do I do?
 
 I work to identify and promote best management practices for cropping systems at multiple scales. I heavily rely my work on applied statistics and reproducible programming to develop accessible and cross-scale digital tools that put modern data analytics (e.g. Machine Learning, Bayesian stats) to the service of our communities.
+
+![Elora Long-term trials, Elora, ON. Picture credits: John Sulik](images/Elora_1.jpeg)
 
 ## 🗺️ Site Map
 
