--- a/04-digital.qmd
+++ b/04-digital.qmd
@@ -60,7 +60,7 @@ Data and codes publicly available
 
 A series of recorded sessions sharing programming codes applied to agriculture.
 
-#### AgHackathon 2023 | Acessing Weahter Data with R
+#### AgHackathon 2023 \| Acessing Weahter Data with R
 
 ::: {align="center"}
 <iframe width="560" height="315" src="https://www.youtube.com/embed/r38NfwZcZPQ" frameborder="0" allowfullscreen>
